<resources>
    <string name="app_name">Shopping List</string>
    <string name="share_domain" translatable="false">shoppinglist-da074.firebaseapp.com</string>
    <string name="share_url" translatable="false">http://%s/%s/%s</string>
    <string name="share_text">View my shopping list at %s: %s</string>
    <string name="open_share_link">Open shopping list</string>
    <string name="join_list_message">Do you want to join the list %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_main">Shopping List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">email@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_rename_list">Rename List</string>
    <string name="action_quit_list">Quit List</string>
    <string name="create_new_list">Create new list</string>
    <string name="chage_list_name">Change list name</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_sublist_lists">My Lists</string>
    <string name="not_available">N/A</string>
    <string name="verify_before_quit">Are you sure you want to quit the list %s?</string>
    <string name="verify_before_delete_task">Are you sure you want to delete the task %s?</string>
    <string name="verify_before_remove_collaborator">Are you sure you want to remove %s from the list?</string>
    <string name="pre_sign_in_message">Hello! welcome to Shop List.\nPlease sign in using your Google account to start using this application.</string>
    <string name="list_title">List title</string>
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="Note">Note</string>
    <string name="add_task">what to add?</string>
    <string name="request_picture">Choose Picture</string>
    <string name="request_camera">Take a Picture</string>
    <string name="rename">rename</string>
    <string name="progress_loading">Loading…</string>
    <string name="progress_creating">Creating…</string>
    <string name="progress_updating">Updating…</string>
    <string name="progress_deleting">Deleting…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_sign_in">Sign In…</string>
    <string name="progress_sign_out">Sign Out…</string>
    <string name="progress_quiting">Quitting…</string>
    <string name="what_to_buy">what to buy?</string>
    <string name="notes_or_details">Notes or Details</string>
    <string name="tap_to_add_an_image">Tap to add an image</string>
    <string name="long_press_to_edit">Long press to edit.</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="sharing_options">Sharing Options</string>
    <string name="users_who_are_can_edit_this_list">Users who can edit this list:</string>
    <string name="default_message">Hi! I\'ve just joined this list.</string>
    <string name="cant_be_empty">Value can\'t be empty.</string>
    <string name="change_personal_message">Change Personal Message</string>
    <string name="personal_message_hint">Your message</string>
    <string name="change">Change</string>
    <string name="there_are_no_items_to_show">There are no items to show.</string>
    <string name="add_more_items_using_the_bar_below">Add more items using the bar below.</string>
    <string name="please_choose_a_list">Please Choose a list.</string>
    <string name="select_or_create_a_new_one_using_the_left_menu">Select or create a new one using the left menu.</string>
    <string name="sign_in_failed">Sign in failed.</string>
    <string name="user_update_failed">User update failed.</string>
    <string name="list_action_failed">List action failed.</string>
    <string name="task_created">Task created.</string>
    <string name="task_action_failed">Task action failed.</string>
    <string name="collaborator_action_failed">Collaborator action failed.</string>
    <string name="picture_upload_failed">Picture upload failed.</string>
    <string name="camera_upload_failed">Camera upload failed.</string>
    <string name="list_created">List created.</string>
    <string name="list_deleted">List deleted.</string>
    <string name="task_deleted">Task deleted.</string>
    <string name="collaborator_deleted">Collaborator deleted.</string>
    <string name="removed_from_list">Removed from list.</string>
    <string name="details_button">Details</string>
    <string name="error_message">Error message: %s</string>
    <string name="communication_error">Communication error.</string>

</resources>
