<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chage_list_name"
        android:padding="5dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/rename_list_popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_title"
        android:maxLength="@integer/max_input_value" />

    <Button
        android:id="@+id/rename_list_popup_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#00000000"
        android:text="@string/rename" />


</LinearLayout>