<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_list_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        />

    <LinearLayout
        android:id="@+id/message_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_menu_add_box"
            android:tint="@color/colorEmptyMessage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/there_are_no_items_to_show"
            android:textColor="@color/colorEmptyMessage"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/add_more_items_using_the_bar_below"
            android:textColor="@color/colorEmptyMessage"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_no_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_menu_assignment"
            android:tint="@color/colorEmptyMessage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/please_choose_a_list"
            android:textColor="@color/colorEmptyMessage"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/select_or_create_a_new_one_using_the_left_menu"
            android:textColor="@color/colorEmptyMessage"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bar_add_task_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/bar_add_task_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/add_task"
            android:layout_weight="4"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionGo"
            android:imeActionLabel="@string/add"
            />

        <ImageButton
            android:id="@+id/bar_add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/ic_add_box_selector"
            android:background="?attr/colorPrimary"
            />

    </LinearLayout>

</RelativeLayout>