<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_title_popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_list"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/edit_title_popup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/list_title"
            android:maxLength="@integer/max_input_value" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="end"
            >

            <LinearLayout
                android:id="@+id/edit_title_popup_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:focusable="true"
                >

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:padding="6dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit_cancel"
                    android:foregroundTint="@color/colorButtonText"
                    />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="33dp"
                    android:textSize="12sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/cancel"
                    android:textColor="@color/colorButtonText"
                    />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_title_popup_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:layout_margin="5dp"
                android:background="@drawable/button_background"
                android:clickable="true"
                android:focusable="true"
                >

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:padding="6dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit_done"
                    android:foregroundTint="@color/colorButtonText"
                    />

                <TextView
                    android:id="@+id/edit_title_popup_accept_text"
                    android:layout_width="50dp"
                    android:layout_height="33dp"
                    android:textSize="12sp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:text="@string/create"
                    android:textColor="@color/colorButtonText"
                    />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>